# sb-claude

./: .env.docker  .env.docker.example  .gitignore  CLAUDE.md  docker-compose.dev.yml  docker-compose.infra.yml  docker-compose.yml  package.json  playwright.config.ts  pnpm-lock.yaml
services/brain_runtime/: .dockerignore  Dockerfile  Dockerfile.dev  PHASE7A_ERROR_HANDLING_COMPLETE.md  demo_errors.py  example_provider_usage.py  hello.py  main.py  pyproject.toml  test_providers.py  test_sdk_integration.py  test_skills_fix.py  test_tools.py  verify_errors.py
services/brain_runtime/api/: __init__.py  agent.py  calendar.py  chat.py  context_files.py  councils.py  health.py  jobs.py  modes.py  personas.py  processors.py  proposals.py  search.py  sessions.py  settings.py  skills.py  sync.py  tasks.py  vault.py  vault_git.py
services/brain_runtime/core/: __init__.py  agent_runtime.py  config.py  council.py  database.py  encryption.py  errors.py  errors_README.md  git_service.py  job_manager.py  multi_llm.py  persona_subagents.py  proposal_service.py  session_service.py  skill_loader.py  skills_service.py  token_counter.py
services/brain_runtime/core/agent/: __init__.py  mcp_tools.py  sdk_runtime.py
services/brain_runtime/core/providers/: IMPLEMENTATION.md  NEXT_STEPS.md  README.md  __init__.py  anthropic.py  base.py  openai.py
services/brain_runtime/core/skills/: __init__.py  injector.py  matcher.py
services/brain_runtime/core/tools/: README.md  (+12 more)
services/brain_runtime/migrations/: README.md
services/brain_runtime/models/: __init__.py  chat.py  db_models.py  job.py
(+120 files in other folders)
