[project]
name = "brain-runtime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.75.0",
    "asyncpg>=0.31.0",
    "chromadb>=1.3.7",
    "claude-agent-sdk>=0.1.18",
    "cryptography>=46.0.0",
    "fastapi>=0.125.0",
    "gitpython>=3.1.40",
    "greenlet>=3.3.0",
    "icalendar>=6.3.2",
    "litellm>=1.80.11",
    "openai>=2.14.0",
    "pydantic-settings>=2.12.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "pytz>=2025.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.0",
    "sqlalchemy>=2.0.45",
    "sse-starlette>=3.0.4",
    "tiktoken>=0.12.0",
    "uvicorn[standard]>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["."]
python_files = ["test_*.py"]
